--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -30,7 +30,7 @@ COPY --from=builder /app/package.json ./package.json
 
 # Automatically leverage output traces to reduce image size
 # https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=builder --chown=bloguser:bloggroup /app/.next/standalone ./
+# COPY --from=builder --chown=bloguser:bloggroup /app/.next/standalone ./
 COPY --from=builder --chown=bloguser:bloggroup /app/.next/static ./.next/static
 
 USER bloguser
