--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,42 +1,22 @@
-# Install dependencies only when needed
-FROM node:16-alpine AS deps
-RUN apk add --no-cache libc6-compat
-WORKDIR /app
-COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile
-
-# Rebuild the source code only when needed
-FROM node:16-alpine AS builder
+FROM node:19-alpine3.16
 
 WORKDIR /app
 
-COPY --from=deps /app/node_modules ./node_modules
+COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
+RUN \
+    if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
+    elif [ -f package-lock.json ]; then npm ci; \
+    elif [ -f pnpm-lock.yaml ]; then yarn global add pnpm && pnpm i; \
+    else echo "Lockfile not found." && exit 1; \
+    fi
+
 
 COPY . .
 
-RUN yarn build
+RUN yarn run build
 
-# Production image, copy all the files and run next
-FROM node:16-alpine AS runner
-WORKDIR /app
-
-ENV NODE_ENV production
-
-RUN addgroup --system --gid 1001 bloggroup
-RUN adduser --system --uid 1001 bloguser
-
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/package.json ./package.json
-
-# Automatically leverage output traces to reduce image size
-# https://nextjs.org/docs/advanced-features/output-file-tracing
-# COPY --from=builder --chown=bloguser:bloggroup /app/.next/standalone ./
-COPY --from=builder --chown=bloguser:bloggroup /app/.next/static ./.next/static
-
-USER bloguser
+COPY . .
 
 EXPOSE 3000
 
-ENV PORT 3000
-
-CMD ["yarn", "run", "start"]
+CMD ["yarn","run","start"]
