--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,9 @@
   "rules": {
     "react/no-unescaped-entities": "off",
     "@next/next/no-page-custom-font": "off",
-	" react/jsx-no-target-blank": "off",
-	"@next/next/no-img-element": "off"
+	"react/jsx-no-target-blank": "off",
+	"@next/next/no-img-element": "off",
+	"jsx-a11y/alt-text": "off"
 
   }
 }
