--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
     "@next/next/no-page-custom-font": "off",
 	"react/jsx-no-target-blank": "off",
 	"@next/next/no-img-element": "off",
-	"jsx-a11y/alt-text": "off"
+	"jsx-a11y/alt-text": "off",
+	"react/jsx-key": "off"
 
   }
 }
