--- a/package.json
+++ b/package.json
@@ -3,26 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-syntax-flow": "^7.18.6",
-    "@babel/plugin-transform-react-jsx": "^7.20.7",
-    "@ckeditor/ckeditor5-build-classic": "^34.2.0",
-    "@ckeditor/ckeditor5-react": "^5.0.2",
-    "@testing-library/dom": "^8.19.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.4.0",
-    "eslint": "^8.31.0",
-    "eslint-config-next": "^13.1.1",
-    "next": "latest",
+    "@heroicons/react": "^2.0.18",
+    "@nextui-org/card": "^2.0.24",
+    "@nextui-org/system": "^2.0.15",
+    "@nextui-org/theme": "^2.1.17",
+    "eslint": "^8.54.0",
+    "eslint-config-next": "^14.0.3",
+    "framer-motion": "^10.16.7",
+    "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-router-dom": "^6.3.0",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
     "rss-parser": "^3.13.0",
-    "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "typescript": "^5.3.2",
+    "web-vitals": "^3.5.0"
   },
   "scripts": {
     "start": "next start",
@@ -50,8 +46,8 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.8",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.7"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
