--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,3 @@
 {
-  //"extends": "next/core-web-vitals",
-  "extends": "next",
-  "rules": {
-    "react/no-unescaped-entities": "off",
-    "@next/next/no-page-custom-font": "off",
-	"react/jsx-no-target-blank": "off",
-	"@next/next/no-img-element": "off",
-	"jsx-a11y/alt-text": "off",
-	"react/jsx-key": "off"
-
-  }
+  "extends": "next/core-web-vitals"
 }
