--- a/package.json
+++ b/package.json
@@ -1,54 +1,24 @@
 {
-  "name": "reactblog",
+  "name": "emakas",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
-    "@nextui-org/card": "^2.0.24",
-    "@nextui-org/system": "^2.0.15",
-    "@nextui-org/theme": "^2.1.17",
-    "eslint": "^8.54.0",
-    "eslint-config-next": "^14.0.3",
-    "framer-motion": "^10.16.7",
-    "next": "^14.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-router-dom": "^6.20.0",
-    "react-scripts": "^5.0.1",
-    "rss-parser": "^3.13.0",
-    "typescript": "^5.3.2",
-    "web-vitals": "^3.5.0"
-  },
-  "scripts": {
-    "start": "next start",
-    "build": "next build",
-    "dev": "next dev",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "next": "14.0.3",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/react": "18.2.41",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
