--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.18",
+    "clear": "^0.1.0",
+    "i": "^0.3.7",
     "next": "14.0.3",
+    "npm": "^10.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
