--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "@types/node": "20.10.3",
+    "@types/react": "18.2.42",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
