--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.18",
+    "@nextui-org/dropdown": "^2.1.16",
+    "@nextui-org/system": "^2.0.15",
+    "@nextui-org/theme": "^2.1.17",
     "clear": "^0.1.0",
+    "framer-motion": "^10.18.0",
     "i": "^0.3.7",
     "next": "14.0.3",
     "npm": "^10.2.4",
