--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.18",
+    "@nextui-org/button": "^2.0.34",
     "@nextui-org/dropdown": "^2.1.16",
-    "@nextui-org/system": "^2.0.15",
-    "@nextui-org/theme": "^2.1.17",
+    "@nextui-org/input": "^2.2.2",
+    "@nextui-org/system": "^2.2.2",
+    "@nextui-org/theme": "^2.2.6",
     "clear": "^0.1.0",
-    "framer-motion": "^10.18.0",
+    "crypto-browserify": "^3.12.0",
+    "firebase": "^10.12.2",
+    "framer-motion": "^11.2.12",
     "i": "^0.3.7",
-    "next": "14.0.3",
-    "npm": "^10.2.4",
+    "next": "14.2.5",
+    "npm": "^10.8.2",
     "react": "^18",
     "react-dom": "^18",
+    "stream-browserify": "^3.0.0",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
